@@ -1,4 +1,5 @@
 2007/02/03
+.testcase verifies node paths after parsing
 .backwards compatibility of archetypes without language section
 
 2007/02/02
